fix: 修复部分问题